test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array.plx
pub fn main(none) i32 {
    arr: [3]any; #  array of incomplete element type is illegal
    return 0
}
